tools/hermes/tests/fixtures/is_valid_verification/expected.stderr
  × Tactic `decide` proved that the proposition
  │   False
  │ is false
    ╭─[[PROJECT_ROOT]/src/lib.rs:24:24]
 23 │ /// proof
 24 │ ///   simp [make_bad]; decide
    ·                        ───┬──
    ·                           ╰── here
 25 │ /// ```
    ╰────

Error: Lean verification failed
